--- a/家族树/demo/tree/index.html
+++ b/家族树/demo/tree/index.html
@@ -32,14 +32,7 @@
 </head>
 <body background="https://c-ssl.duitang.com/uploads/item/201710/04/20171004180050_4Bz2Z.thumb.700_0.jpeg"><!-- 网页背景 -->
      <div id='panel' style='height:720px;overflow:auto'> <!-- 实现网页页面滚动条 -->
-     <textarea id="dataId">导师：张三
-2016级博士生：李四
-2015级本科生：王五、启动
-2013级硕士生：李六
-
-导师：新人
-2014级博士生：莉莉
-2016级本科生：晓东</textarea>
+     <textarea id="dataId"></textarea>
     <div><button id=' begin' style="height: 50px;width: 100px; font-size: 20px; background: #73C5EE" onclick="btnClick()">建立树</button></div>
 
     <script type="text/javascript">
